# CC_RobotAppPlugin

plugins/qRobotAppPlugin/: CMakeLists.txt  Connection.cpp  Connection.h  ScanState.h  calibration.cpp  calibration.h  calibration.ui  connectiond.cpp  connectiond.h  connectiond.ui  moverobot.cpp  moverobot.h  moverobot.ui  qDummyPlugin.qrc  qRobotAppPlugin.cpp  qRobotAppPlugin.h  qRobotAppSettings.h  utils.h  vectorpicker.cpp  vectorpicker.h  vectorpicker.ui
